--- a/Source/YastLib/YastLib.csproj
+++ b/Source/YastLib/YastLib.csproj
@@ -76,10 +76,15 @@
   <ItemGroup>
     <Compile Include="Auth\LoginRequest.cs" />
     <Compile Include="Auth\LoginResponse.cs" />
+    <Compile Include="Common\YastRecord.cs" />
     <Compile Include="Common\YastRequest.cs" />
     <Compile Include="Common\YastResponse.cs" />
     <Compile Include="Common\Status.cs" />
     <Compile Include="Common\YastTime.cs" />
+    <Compile Include="Data\GetRecordsRequest.cs" />
+    <Compile Include="Data\GetRecordsResponse.cs" />
+    <Compile Include="Data\PhonecallRecord.cs" />
+    <Compile Include="Data\WorkRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\ReportFormat.cs" />
     <Compile Include="Report\GetReportRequest.cs" />
