--- a/Test/YastLib.Test/App.config
+++ b/Test/YastLib.Test/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Yast.User" value="kvh+yast@dottix.com" />
-    <add key="Yast.Password" value="yastkvh123" />
+    <add key="Yast.User" value="" />
+    <add key="Yast.Password" value="" />
   </appSettings>
 </configuration>
