Put user/pass in PrivateApp.config (excluded in .gitignore)

--- a/Test/YastLib.Test/App.config
+++ b/Test/YastLib.Test/App.config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>
+  <appSettings file="PrivateApp.config">
     <add key="Yast.User" value="" />
     <add key="Yast.Password" value="" />
   </appSettings>
