--- a/Source/YastLib/YastLib.csproj
+++ b/Source/YastLib/YastLib.csproj
@@ -76,18 +76,30 @@
   <ItemGroup>
     <Compile Include="Auth\LoginRequest.cs" />
     <Compile Include="Auth\LoginResponse.cs" />
+    <Compile Include="Common\YastAuthToken.cs" />
+    <Compile Include="Common\YastCollectionResponse.cs" />
+    <Compile Include="Common\YastElement.cs" />
     <Compile Include="Common\YastFolder.cs" />
     <Compile Include="Common\YastPrivilege.cs" />
+    <Compile Include="Common\YastProject.cs" />
     <Compile Include="Common\YastRecord.cs" />
+    <Compile Include="Common\YastRecordType.cs" />
     <Compile Include="Common\YastRequest.cs" />
     <Compile Include="Common\YastResponse.cs" />
     <Compile Include="Common\Status.cs" />
     <Compile Include="Common\YastTime.cs" />
     <Compile Include="Common\XElementExtensions.cs" />
+    <Compile Include="Common\YastVariableType.cs" />
+    <Compile Include="Data\GetFoldersRequest.cs" />
+    <Compile Include="Data\GetFoldersResponse.cs" />
+    <Compile Include="Data\GetProjectsRequest.cs" />
+    <Compile Include="Data\GetProjectsResponse.cs" />
     <Compile Include="Data\GetRecordsRequest.cs" />
     <Compile Include="Data\GetRecordsResponse.cs" />
     <Compile Include="Data\PhonecallRecord.cs" />
     <Compile Include="Data\WorkRecord.cs" />
+    <Compile Include="Meta\GetRecordTypesRequest.cs" />
+    <Compile Include="Meta\GetRecordTypesResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\ReportFormat.cs" />
     <Compile Include="Report\GetReportRequest.cs" />
