--- a/Test/YastLib.Test/YastLib.Test.csproj
+++ b/Test/YastLib.Test/YastLib.Test.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YastAssert.cs" />
     <Compile Include="YastClientTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +67,9 @@
       <Project>{55be8dbb-a625-4eeb-adaf-b33c3a60e399}</Project>
       <Name>YastLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Fakes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
